[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "1.0.0"
description = "Trading Bot with DeepSeek AI integration"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Framework :: Pytest",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["docs/"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src/backend"
exclude = ["tests/.*"]
ignore_missing_imports = true
follow_imports = "silent"
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "pymongo.*",
    "fastapi.*",
    "pydantic.*",
    "sqlalchemy.*",
    "uvicorn.*",
    "redis.*",
    "aiohttp.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API tests",
    "config: Configuration tests",
    "slow: Tests that take longer to run",
    "smoke: Quick tests to verify basic functionality",
    "security: Security-related tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = [
    "docs",
    "tests",
    "src/backend/tests",
    "**/tests",
    "**/test_*.py",
    "**/tests/**/*.py"
]
skips = ["B101", "B104"]
ignore_nosec = false
recursive = true
exclude_paths = ["tests/", "*/tests/", "**/test_*.py", "**/tests/**/*.py"]
noqa = true
per_file_ignores = [
    "**/test_*.py:B101,B104",
    "**/tests/**/*.py:B101,B104"
]
targets = ["src/backend"]

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
ignore = ["CVS", ".git", ".pytest_cache", "docs"]
ignore-patterns = ["^\\.#"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "docs/",
    "*.pyc",
    "*.egg-info",
    ".eggs",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
